--- a/tweetrieve/templates/home.html
+++ b/tweetrieve/templates/home.html
@@ -1,9 +1,28 @@
+<html>
+
+{% block head %}
+<head>
+	<title>Tweetmojo</title>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+</head>
+{% endblock %}
+
 {% block search_bar %}
-	<form name="input" action="tweetrieve/views/formsubmit" method="get">
-		Username: <input type="text" name="handle">
-		<input type="submit" value="Submit">
+	<form class="form-inline" role="form" name="input" action="tweetrieve/views/formsubmit" method="get">
+  		<div class="form-group">
+    		<label class="sr-only" for="handle">Twitter Handle</label>
+    		<input type="text" class="form-control" id="handle" name="handle" placeholder="Enter handle" required>
+  		</div>
+  		<button type="submit" class="btn btn-primary">Search</button>
 	</form>
 {% endblock %}
 
 {% block tweet_listing %}
 {% endblock %}
+
+{% block cdn %}
+<script src="//code.jquery.com/jquery.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+{% endblock%}
+
+</html>
