--- a/tweetrieve/templates/home.html
+++ b/tweetrieve/templates/home.html
@@ -8,6 +8,10 @@
 {% endblock %}
 
 {% block search_bar %}
+	<br>
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4">
 	<form class="form-inline" role="form" name="input" action="tweetrieve/views/formsubmit" method="get">
   		<div class="form-group">
     		<label class="sr-only" for="handle">Twitter Handle</label>
@@ -15,6 +19,10 @@
   		</div>
   		<button type="submit" class="btn btn-primary">Search</button>
 	</form>
+	</div>
+	<div class="col-md-4"></div>
+
+	</div>
 {% endblock %}
 
 {% block tweet_listing %}
