Removing static files, using CDN, adding README.md, fixing typo

--- a/tweetrieve/templates/create_offer.html
+++ b/tweetrieve/templates/create_offer.html
@@ -29,7 +29,7 @@
 
 {% if error_messages %}
 <div style="margin-left:30px; margin-right:30px; " class="panel panel-danger">
-  <div class="panel-heading">Your tweet fails the following requirements:</div>
+  <div class="panel-heading">Your tweet fails to meet the following requirements:</div>
 
   <ul class="list-group">
   	{% for message in error_messages %}
