--- a/tweetrieve/templates/tweet_list.html
+++ b/tweetrieve/templates/tweet_list.html
@@ -81,7 +81,7 @@ function sendTweet(tweet_id){
 				<li>q - Quantity <br>(0 for unlimited)</li>
 				<li>s - Start Date <br>(YYYY-MM-DD hh:mm)</li>
 				<li>e - End Date <br>(YYYY-MM-DD hh:mm)</li>
-				<li>z - Timezone <br>(ex: "Asia/Kolkate")</li>
+				<li>z - Timezone <br>(ex: "Asia/Kolkata")</li>
 				<li>v - Venue</li>
 				<li>u - Redirect URL</li>
 				<li>n - Note</li>
