--- a/tweetrieve/templates/tweet_list.html
+++ b/tweetrieve/templates/tweet_list.html
@@ -8,7 +8,7 @@
 
 <script>
 function sendTweet(tweet_id){
-	tweet_text = $("#tweet"+tweet_id).text();
+	tweet_text = $("#tweet"+tweet_id).html();
 	$("#tweet_text").val(tweet_text);
 	$("#sendtweet").submit();
 }
@@ -46,7 +46,7 @@ function sendTweet(tweet_id){
 	
 	<div class="col-md-4">
 		<div class="row">
-		<form class="form-inline" role="form" name="input" action="tweetrieve/views/formsubmit" method="get">
+		<form class="form-inline" role="form" name="input" action="tweetrieve/views/search_tweets" method="get">
 				<div class="form-group">
 				<label class="sr-only" for="handle">Twitter Handle</label>
 				<input type="text" class="form-control" id="handle" name="handle" placeholder="Twitter Username" required>
@@ -56,7 +56,7 @@ function sendTweet(tweet_id){
 		</div>
 		<div class="row">{% if tweet_list %}
 	    {% for tweet in tweet_list %}
-	        <span id="tweet{{tweet.tweet_id}}">{{ tweet.tweet_text }}</span>
+	        <span id="tweet{{tweet.tweet_id}}">{% autoescape off %}{{ tweet.tweet_text }}{% endautoescape %}</span>
 	        <br><br>
 	        <button type="button" class="btn btn-primary btn-sm" onclick="sendTweet({{tweet.tweet_id}})">Create Offer</button>
 	        <hr>
@@ -94,7 +94,7 @@ function sendTweet(tweet_id){
 {% endblock %}
 
 {% block tweet_listing %}
-	<form id="sendtweet" name="sendtweet" method="POST" action="tweetsubmit">{% csrf_token %}
+	<form id="sendtweet" name="sendtweet" method="POST" action="create_offer">{% csrf_token %}
 		<input type="hidden" id="tweet_text" name="tweet_text"></input>
 	</form>
 {% endblock %}
