Adding a note, small UI changes

--- a/tweetrieve/templates/tweet_list.html
+++ b/tweetrieve/templates/tweet_list.html
@@ -39,6 +39,8 @@ function sendTweet(tweet_id){
     		c - INR<br>
     		p - 50 	
     		</div>
+    		<hr>
+    		Note: All offers created on vrp101's Instamojo account.
 		</div>
  	</div>
  </div>
