--- a/tweetrieve/templates/create_offer.html
+++ b/tweetrieve/templates/create_offer.html
@@ -9,7 +9,7 @@
 
 <nav class="navbar navbar-default" role="navigation">
   <div class="navbar-header">
-    <a class="navbar-brand" href="">Tweetmojo</a>
+    <a class="navbar-brand" href="/">Tweetmojo</a>
   </div>
 </nav>
 
